--- a/gain-XP/index.html
+++ b/gain-XP/index.html
@@ -14,6 +14,7 @@
     <p class="xp">+20xp</p>
     <button id="xp-button">Gain XP</button>
     <a href="../">Fly Page</a>
+    <a href="../night-transition/">Night Transition Page</a>
 </body>
     <script src="./gain-XP.js"></script>
 </html>
