--- a/night-transition/index.html
+++ b/night-transition/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="./night-transition.css">
     <title>Document</title>
 </head>
-<body>
-    <img src="../moon-and-stars-transparent-5.png" alt="">
-    <a href="../night-transition/">transition to night and back</a>
-</body>
+    <body>
+        <img src="../moon-and-stars-transparent-5.png" alt="">
+        <a href="../night-transition/">transition to night and back</a>
+        <a href="../">fly animation</a>
+        <a href="../gain-XP/">gain xp animation</a>
+    </body>
 </html>
