--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./fly.css">
-    <title>Document</title>
+    <title>Fly Animation</title>
 </head>
-<body>
-    <h1>Flying</h1>
-    <div class="fly"></div>
-    <a href="./gain-XP/">Gain XP Page</a>
-</body>
+    <body>
+        <h1>Flying</h1>
+        <div class="fly"></div>
+        <a href="./gain-XP/">Gain XP Page</a>
+        <a href="./night-transition/">Night Transition Page</a>
+    </body>
 </html>
